--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1005,6 +1005,33 @@ section.lazy-placeholder:after {
     text-align: center !important;
   }
 }
+.cid-sJO6M5jvDZ {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-sJO6M5jvDZ H1 {
+  color: #57468b;
+}
+.cid-sJO6M5jvDZ .mbr-text,
+.cid-sJO6M5jvDZ .mbr-section-btn {
+  color: #716c80;
+}
+.cid-sJO6M5jvDZ img {
+  width: 100%;
+  border-radius: 10px;
+}
+@media (min-width: 1200px) {
+  .cid-sJO6M5jvDZ .col-lg-6 {
+    padding: 0 2rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-sJO6M5jvDZ img {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+}
 .cid-sIuiNAWMur {
   padding-top: 0rem;
   padding-bottom: 0rem;
@@ -1224,7 +1251,7 @@ section.lazy-placeholder:after {
 }
 .cid-sJCx0nArnW {
   padding-top: 0rem;
-  padding-bottom: 1rem;
+  padding-bottom: 2rem;
   overflow: hidden;
   background-color: #ffffff;
 }
@@ -1375,7 +1402,7 @@ section.lazy-placeholder:after {
 }
 .cid-rzMrbJWA9w {
   padding-top: 0px;
-  padding-bottom: 0px;
+  padding-bottom: 30px;
   background-color: #ffda73;
 }
 .cid-rzMrbJWA9w .icon-transition span {
